# robo_rover_pet

./: .gitignore  README.md  build_macos_linux.sh  build_windows.bat  pyproject.toml  requirements.txt  run.py
robo_rover_pet/: __init__.py  app.py  banter.py  companion.py  llm.py  persistence.py
