[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robo-rover-pet"
version = "0.2.0"
description = "A local PySide6 desktop pet powered by Ollama."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Robo Rover Pet contributors" }
]
dependencies = [
  "PySide6>=6.6",
  "requests>=2.31",
  "pynput>=1.7.6",
]
keywords = ["desktop-pet", "ollama", "pyside6", "qt", "desktop-companion"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Desktop Environment",
  "Topic :: Entertainment",
]

[project.optional-dependencies]
voice = ["pyttsx3>=2.90"]
build = ["pyinstaller>=6.0"]

[project.scripts]
robo-rover-pet = "robo_rover_pet.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"robo_rover_pet" = ["assets/sounds/*.wav", "assets/sounds/*.MP3", "assets/sounds/*.mp3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["robo_rover_pet*"]
